--- a/Retail/Code/Retail.EntitiesMigrator/App.config
+++ b/Retail/Code/Retail.EntitiesMigrator/App.config
@@ -1,6 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <section name="vanriseLogging" type="Vanrise.Common.LoggingConfiguration.LoggingConfig, Vanrise.Common" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+
+  <appSettings file="appSettings.config">
+    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
+
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString" />
+    <add key="Retail_BE_DBConnStringKey"                        value="RetailDBConnString" />
+    <add key="RulesDBConnStringKey"                             value="ConfigurationDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString" />
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="NumberingPlanDBConnStringKey"                     value="RetailDBConnString"/>
+  </appSettings>
+
+
+  <connectionStrings>
+    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_Configuration;User ID=Development;Password=dev!123"/>
+    <add name="RetailDBConnString" connectionString="Data Source=192.168.110.185;Initial Catalog=Retail_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />
+    <add name="RatesDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_SampleSource;User ID=Development;Password=dev!123"/>
+    <add name="LogDBConnString" connectionString="Initial Catalog=Retail_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
+  </connectionStrings>
+
+  <vanriseLogging maxLogLevel="Information">
+    <loggers>
+      <logger name="SQLLogger" type="Vanrise.Logging.SQL.SQLLogger, Vanrise.Logging.SQL">
+        <parameters>
+          <parameter name="LoggingConnectionStringKey" value="LogDBConnString" />
+          <parameter name="ConfigurationConnectionStringKey" value="ConfigurationDBConnString" />
+        </parameters>
+      </logger>
+      <logger name="ConsoleLogger"  type="Vanrise.Common.ConsoleLogger, Vanrise.Common"></logger>
+    </loggers>
+    <exceptionLoggers>
+      <exceptionLogger name="ConsoleExceptionLogger"  type="Vanrise.Common.ConsoleExceptionLogger, Vanrise.Common"></exceptionLogger>
+      <exceptionLogger name="DefaultExceptionLogger"  type="Vanrise.Common.DefaultExceptionLogger, Vanrise.Common"></exceptionLogger>
+    </exceptionLoggers>
+  </vanriseLogging>
 </configuration>
