started OffNet rates migrator
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41990

--- a/Retail/Code/Retail.EntitiesMigrator.Data.SQL/Retail.EntitiesMigrator.Data.SQL.csproj
+++ b/Retail/Code/Retail.EntitiesMigrator.Data.SQL/Retail.EntitiesMigrator.Data.SQL.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="IncomingRatesDataManager.cs" />
     <Compile Include="InternationalRateDataManager.cs" />
+    <Compile Include="OffNetRatesDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
