--- a/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
+++ b/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
@@ -177,7 +177,9 @@
     </Compile>
     <Compile Include="Migrators\IncomingRatesMigrator.cs" />
     <Compile Include="Migrators\InternationalRatesMigrator.cs" />
+    <Compile Include="Migrators\MonthlyChargesMigrator.cs" />
     <Compile Include="Migrators\OffNetRatesMigrator.cs" />
+    <Compile Include="Migrators\MobileRatesMigrator .cs" />
     <Compile Include="Migrators\OnNetRatesMigrator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
