--- a/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
+++ b/Retail/Code/Retail.EntitiesMigrator/Retail.EntitiesMigrator.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.AccountBalance.MainExtensions">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.MainExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Caching">
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
