--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Arguments/TOne.WhS.Deal.BP.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Arguments/TOne.WhS.Deal.BP.Arguments.csproj
@@ -41,8 +41,12 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.BusinessProcess.Entities">
+      <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DealEvaluatorProcessInput.cs" />
     <Compile Include="DealEvaluatorSubProcessOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
