Preparing Schema for Excel Converter Changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42009

--- a/Vanrise/Code/Vanrise.ExcelConversion.MainExtensions/Vanrise.ExcelConversion.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.ExcelConversion.MainExtensions/Vanrise.ExcelConversion.MainExtensions.csproj
@@ -50,6 +50,8 @@
     <Compile Include="ConcatenatedParts\ConstantConcatenatedPart.cs" />
     <Compile Include="FieldMappings\CellFieldMapping.cs" />
     <Compile Include="FieldMappings\ConcatenateFieldMapping.cs" />
+    <Compile Include="FieldMappings\ConditionalCellFieldMapping.cs" />
+    <Compile Include="FieldMappings\FixedCellFieldMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
