--- a/Retail/Code/Retail.Web/Retail.Web.csproj
+++ b/Retail/Code/Retail.Web/Retail.Web.csproj
@@ -503,6 +503,9 @@
     <Reference Include="Vanrise.Queueing">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Queueing.BP.Activities">
+      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.BP.Activities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Queueing.Data">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Data.dll</HintPath>
     </Reference>
