Update reference to be from project instead of output within same solution
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42030

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP/TOne.WhS.Sales.BP.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP/TOne.WhS.Sales.BP.csproj
@@ -45,14 +45,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TOne.WhS.BusinessEntity.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Output\TOne.WhS.BusinessEntity.Business.dll</HintPath>
-    </Reference>
-    <Reference Include="TOne.WhS.BusinessEntity.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Output\TOne.WhS.BusinessEntity.Entities.dll</HintPath>
-    </Reference>
     <Reference Include="Vanrise.BusinessProcess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.dll</HintPath>
@@ -85,6 +77,14 @@
     </XamlAppDef>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TOne.WhS.BusinessEntity.Business\TOne.WhS.BusinessEntity.Business.csproj">
+      <Project>{5635598e-8526-4bb4-9d1b-87a6b3b1ce72}</Project>
+      <Name>TOne.WhS.BusinessEntity.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.BusinessEntity.Entities\TOne.WhS.BusinessEntity.Entities.csproj">
+      <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
+      <Name>TOne.WhS.BusinessEntity.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Sales.BP.Activities\TOne.WhS.Sales.BP.Activities.csproj">
       <Project>{BA3E1017-95E3-4036-B941-D3F60586064E}</Project>
       <Name>TOne.WhS.Sales.BP.Activities</Name>
