--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Arguments/TOne.WhS.Sales.BP.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.BP.Arguments/TOne.WhS.Sales.BP.Arguments.csproj
@@ -41,9 +41,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TOne.WhS.BusinessEntity.Business">
-      <HintPath>..\Output\TOne.WhS.BusinessEntity.Business.dll</HintPath>
-    </Reference>
     <Reference Include="Vanrise.BusinessProcess.Entities">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
     </Reference>
@@ -69,6 +66,10 @@
     <Compile Include="Tasks\PreviewTaskExecutionInformation.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TOne.WhS.BusinessEntity.Business\TOne.WhS.BusinessEntity.Business.csproj">
+      <Project>{5635598e-8526-4bb4-9d1b-87a6b3b1ce72}</Project>
+      <Name>TOne.WhS.BusinessEntity.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.BusinessEntity.Entities\TOne.WhS.BusinessEntity.Entities.csproj">
       <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
       <Name>TOne.WhS.BusinessEntity.Entities</Name>
