Editing DealEvaluator BP
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42040

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Activities/TOne.WhS.Deal.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP.Activities/TOne.WhS.Deal.BP.Activities.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.DurableInstancing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activities" />
@@ -49,6 +50,9 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Vanrise.BusinessProcess">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Caching">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Common">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
