--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -900,6 +900,18 @@
       <Project>{66a454c0-d24c-4378-942f-4b7bc0f1e05a}</Project>
       <Name>TOne.WhS.DBSync.Business</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Deal.BP.Activities\TOne.WhS.Deal.BP.Activities.csproj">
+      <Project>{be229d5a-e599-420b-a57e-164031b36f1d}</Project>
+      <Name>TOne.WhS.Deal.BP.Activities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Deal.BP.Arguments\TOne.WhS.Deal.BP.Arguments.csproj">
+      <Project>{0703b9f8-154e-470d-9507-c4dc47dcab44}</Project>
+      <Name>TOne.WhS.Deal.BP.Arguments</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Deal.BP\TOne.WhS.Deal.BP.csproj">
+      <Project>{72b29f45-36f4-46dd-a5ff-3780e5270eab}</Project>
+      <Name>TOne.WhS.Deal.BP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Deal.Business\TOne.WhS.Deal.Business.csproj">
       <Project>{fcc59d3d-6e58-4558-bc27-8c6a01223cb7}</Project>
       <Name>TOne.WhS.Deal.Business</Name>
