Refactor Data Parser, Add SplitByBlock  Parser
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42041

--- a/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
@@ -59,6 +59,7 @@
     <Compile Include="HexTLV\RecordParsers\CreateRecordRecordParser.cs" />
     <Compile Include="HexTLV\RecordParsers\ExecuteTemplateRecordParser.cs" />
     <Compile Include="HexTLV\RecordParsers\PositionedFieldsRecordParser.cs" />
+    <Compile Include="HexTLV\RecordParsers\SplitByBlockRecordParser.cs" />
     <Compile Include="HexTLV\RecordParsers\SplitByOffSetRecordParser.cs" />
     <Compile Include="HexTLV\RecordParsers\SplitByPositionedTypeRecordParser.cs" />
     <Compile Include="HexTLV\RecordParsers\SplitByTagRecordParser.cs" />
