--- a/Retail/Code/Retail.EntitiesMigrator/App.config
+++ b/Retail/Code/Retail.EntitiesMigrator/App.config
@@ -21,8 +21,8 @@
 
 
   <connectionStrings>
-    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=Retail.MultiNet_Online;User ID=Application_Online_User;Password=Application_Online_User;"/>
-    <add name="RetailDBConnString" connectionString="Server=192.168.110.185;Database=Retail.MultiNet_Online;User ID=Application_Online_User;Password=Application_Online_User;" providerName="System.Data.SqlClient" />
+    <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=Retail.MultiNet_Online;User ID=Application_Online_User;Password=Application_Online_User;"/>
+    <add name="RetailDBConnString" connectionString="Server=192.168.110.185\MSSQL2014;Database=Retail.MultiNet_Online;User ID=Application_Online_User;Password=Application_Online_User;" providerName="System.Data.SqlClient" />
     <add name="RatesDBConnString" connectionString="Server=192.168.110.185;Database=Retail_Dev_SampleSource;User ID=Development;Password=dev!123"/>
     <add name="LogDBConnString" connectionString="Initial Catalog=Retail_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
   </connectionStrings>
