Update Zajil Account Convertor, Add new separate Site Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42062

--- a/Retail/Code/Retail.Zajil.MainExtensions/Retail.Zajil.MainExtensions.csproj
+++ b/Retail/Code/Retail.Zajil.MainExtensions/Retail.Zajil.MainExtensions.csproj
@@ -90,6 +90,7 @@
     <Compile Include="InvoiceExtensions\ZajilSubscriberInvoiceGenerator.cs" />
     <Compile Include="InvoiceExtensions\ZajilSubscriberInvoiceSettings.cs" />
     <Compile Include="InvoiceExtensions\ZajilSubscriberPartnerSettings.cs" />
+    <Compile Include="SiteConvertor.cs" />
     <Compile Include="ZajilCompanyExtendedInfo.cs" />
     <Compile Include="ZajilCompanyExtendedInfoDefinition.cs" />
     <Compile Include="AccountPartOrderDetail.cs" />
