--- a/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
+++ b/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
@@ -78,6 +78,9 @@
     <Compile Include="EnterpriseNotMappedToAccountFilter.cs" />
     <Compile Include="InternationalCallsBlockedFieldDefinition.cs" />
     <Compile Include="InternationalCallsBlockedGenericField.cs" />
+    <Compile Include="ProvisioningAccount\ProvisionAccountManager.cs" />
+    <Compile Include="ProvisioningAccount\ProvisionSiteRuntimeSettings.cs" />
+    <Compile Include="ProvisioningAccount\ProvisionSiteDefinitionSettings.cs" />
     <Compile Include="Provisioning\ChangeUsersRGs\ChangeUsersRGsDefinitionSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provisioning\ChangeUsersRGs\ChangeUsersRGsRuntimeSettings.cs" />
