--- a/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
+++ b/Retail/Code/Retail.Teles.Web/Retail.Teles.Web.csproj
@@ -156,6 +156,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Retail_Teles\Constant\ConditionTypeEnum.js" />
     <Content Include="Retail_Teles\Constant\ExistingRGNoMatchHandlingEnum.js" />
     <Content Include="Retail_Teles\Constant\ModuleConfig.js" />
     <Content Include="Retail_Teles\Constant\NewRGMultiMatchHandlingEnum.js" />
@@ -178,9 +179,13 @@
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ChangeUsersRGs\Templates\ChangeUsersRGsProvisionerRuntimeSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\MainExtensions\retail-teles-accountextrafield-internationalcallsblocked.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\MainExtensions\Templates\InternationalCallsBlockedExtraFieldTemplate.html" />
+    <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\retail-teles-provisioner-definitionsettings-provisionsite.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\retail-teles-provisioner-provisionaccount-settings.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\retail-teles-provisioner-definitionsettings-provisionaccount.js" />
+    <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\retail-teles-provisioner-runtimesettings-provisionsite.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\retail-teles-provisioner-runtimesettings-provisionaccount.js" />
+    <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\Templates\ProvisionSiteRuntimeSettingsTemplate.html" />
+    <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\Templates\ProvisionSiteDefinitionSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\Templates\ProvisionAccountDefinitionSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\Templates\ProvisionAccountRuntimeSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ProvisioningScreenedNumbers\Templates\ProvisionAccountSettingsTemplate.html" />
@@ -189,6 +194,8 @@
     <Content Include="Retail_Teles\Directives\AccountAction\RoutingGroupCondition\retail-teles-routinggroupcondition.js" />
     <Content Include="Retail_Teles\Directives\AccountAction\Provisioning\ChangeUsersRGs\Templates\ChangeUsersRGsProvisionerDefinitionSettingsTemplate.html" />
     <Content Include="Retail_Teles\Directives\AccountAction\RoutingGroupCondition\Templates\RoutingGroupConditionTemplate.html" />
+    <Content Include="Retail_Teles\Directives\AccountCondition\retail-teles-accountcondition-telesaccount.js" />
+    <Content Include="Retail_Teles\Directives\AccountCondition\Templates\TelesAccountConditionTemplate.html" />
     <Content Include="Retail_Teles\Directives\ConnectionTypes\retail-teles-telesrestconnection-editor.js" />
     <Content Include="Retail_Teles\Directives\ConnectionTypes\Templates\TelesRestConnectionEditorTemplate.html" />
     <Content Include="Retail_Teles\Directives\TelesEnterprises\MainExtensions\retail-teles-accountextrafield-enterprise.js" />
