--- a/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.DataParser.MainExtensions/Vanrise.DataParser.MainExtensions.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompositeFieldParsers\DateTimeCompositeParser.cs" />
+    <Compile Include="CompositeFieldParsers\GuidCompositeParser.cs" />
     <Compile Include="CompositeFieldParsers\TimestampDateTimeCompositeParser.cs" />
     <Compile Include="HexTLV\FieldParsers\BoolFieldParser.cs" />
     <Compile Include="HexTLV\FieldParsers\CallLocationInformationParser.cs" />
