--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Group\GroupQuery.cs" />
     <Compile Include="Group\GroupSettings.cs" />
     <Compile Include="Group\GroupSettingsConfig.cs" />
+    <Compile Include="Group\ITryAddUserGroupSettingsContext.cs" />
     <Compile Include="Group\IGroupSettingsContext.cs" />
     <Compile Include="ISecurityContext.cs" />
     <Compile Include="MenuItem.cs" />
