Defined new normal rates for the zones of new countries in case the customer's currency is different than that of its selling product
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42103

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -162,6 +162,7 @@
     <Compile Include="RatePlanning\Enums.cs" />
     <Compile Include="RatePlanning\Input\AddNormalRatesToDraftInput.cs" />
     <Compile Include="RatePlanning\Input\ApplyCalculatedRatesInput.cs" />
+    <Compile Include="RatePlanning\Input\DefineNewRatesConvertedToCurrencyInput.cs" />
     <Compile Include="RatePlanning\Input\GetCustomerDefaultInheritedServiceInput.cs" />
     <Compile Include="RatePlanning\Input\GetZoneInheritedServiceInput.cs" />
     <Compile Include="RatePlanning\Input\TryApplyCalculatedRatesInput.cs" />
