Add Search Management for Generic Rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42111

--- a/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
+++ b/Vanrise/Code/Vanrise.GenericData.Web/Vanrise.GenericData.Web.csproj
@@ -271,7 +271,9 @@
     <Content Include="VR_GenericData\Directives\GenericRuleDefinition\vr-genericdata-overriddenconfiguration-genericruledefinition.js" />
     <Content Include="VR_GenericData\Directives\GenericRuleDefinition\vr-genericdata-genericruledefinition-settings.js" />
     <Content Include="VR_GenericData\Directives\GenericRule\Templates\GenericRuleCriteriaTemplate.html" />
+    <Content Include="VR_GenericData\Directives\GenericRule\Templates\GenericRuleManagementTemplate.html" />
     <Content Include="VR_GenericData\Directives\GenericRule\vr-genericdata-genericrule-criteria.js" />
+    <Content Include="VR_GenericData\Directives\GenericRule\vr-genericdata-genericrule-management.js" />
     <Content Include="VR_GenericData\Directives\MainExtensions\DataRecordFieldFormulas\Templates\ParentBusinessEntityFieldFormulaTemplate.html" />
     <Content Include="VR_GenericData\Directives\MainExtensions\DataRecordFieldFormulas\vr-genericdata-datarecordtypefields-formula-parentbusinessentity.js" />
     <Content Include="VR_GenericData\Directives\MainExtensions\DataRecord\VRActionDefinition\Templates\VRActionDefinitionSendEmail.html" />
