ScehmaCompare for RetailEDR
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42122

--- a/Retail/Code/Retail.Runtime/App.config
+++ b/Retail/Code/Retail.Runtime/App.config
@@ -18,17 +18,17 @@
         </runtimeServices>
       </runtimeServiceGroup>
       <!-- Regulator service manages Business Process service. nbOfRuntimeInstances Keep it 1-->
-      <runtimeServiceGroup name="groupA" nbOfRuntimeInstances="1">
+      <!--<runtimeServiceGroup name="groupA" nbOfRuntimeInstances="1">
         <runtimeServices>
           <runtimeService name="Business Process Regulator Service" type="Vanrise.BusinessProcess.BPRegulatorRuntimeService, Vanrise.BusinessProcess" interval="00:00:01"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>
+      </runtimeServiceGroup>-->
       <!-- Used for Business Process (Reprocess, Route build, Product Cost Generation, etc...). nbOfRuntimeInstances depended on available resources.-->
-      <runtimeServiceGroup name="group1" nbOfRuntimeInstances="3">
+      <!--<runtimeServiceGroup name="group1" nbOfRuntimeInstances="3">
         <runtimeServices>
           <runtimeService name="Business Process Service" type="Vanrise.BusinessProcess.BusinessProcessService, Vanrise.BusinessProcess" interval="00:00:01"></runtimeService>
         </runtimeServices>
-      </runtimeServiceGroup>
+      </runtimeServiceGroup>-->
       <!-- Regulator service manages Queue activation service. nbOfRuntimeInstances Keep it 1-->
       <runtimeServiceGroup name="group3" nbOfRuntimeInstances="1">
         <runtimeServices>
