--- a/Retail/Code/Retail.BusinessEntity.MainActionBPs.Activities/Retail.BusinessEntity.MainActionBPs.Activities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainActionBPs.Activities/Retail.BusinessEntity.MainActionBPs.Activities.csproj
@@ -50,6 +50,10 @@
     <Reference Include="Vanrise.BusinessProcess">
       <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
