--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Business/TOne.WhS.BusinessEntity.Business.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Country\CountryNotSoldToCustomerFilter.cs" />
     <Compile Include="CustomerSellingProductManager.cs" />
     <Compile Include="Country\CustomerZoneManager.cs" />
-    <Compile Include="EventHandler\ReevaluateCarrierProfileStatusChangedHandler.cs" />
+    <Compile Include="CarrierAccounts\ReevaluateCarrierProfileStatusChangedHandler.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="PricingRules\PricingRuleRateTypeItemContext.cs" />
@@ -244,7 +244,9 @@
       <Name>TOne.WhS.Sales.Entities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="EventHandler\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
