--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Tenant\TenantType.cs" />
     <Compile Include="Tenant\TenantTypeSettings.cs" />
     <Compile Include="UserGroup.cs" />
+    <Compile Include="User\UserDTO.cs" />
     <Compile Include="User\UserDetail.cs" />
     <Compile Include="User\User.cs" />
     <Compile Include="User\UserFilter.cs" />
